Complete project update: Add documentation, enhance features, and prepare for GitHub
- Add comprehensive documentation (docs/DOCUMENTATION.md)
- Create .env.example template for environment configuration
- Enhance .gitignore to exclude staticfiles and IDE files
- Add new resume template (Creative) and preview functionality
- Add interview preparation and job stats features
- Add company profile and employer onboarding
- Update all app models, views, and templates
- Add new migrations for salary fields and employer profile enhancements
- Add test files for views
- Update requirements.txt with all dependencies
- Improve UI/UX across all templates
- Add toast.js for notifications

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,11 @@ db.sqlite3
 # Media files
 /media/
 
+# Static files (collected by collectstatic)
+/staticfiles/
+
 # Other
 .DS_Store
+*.log
+.vscode/
+.idea/
