--- a/.env.example
+++ b/.env.example
@@ -1,154 +1,32 @@
-﻿# ============================================
-# AI Resume Builder - Environment Variables
-# ============================================
-# Copy this file to .env and fill in your values
-# DO NOT commit .env to version control!
-
-# ============================================
-# CRITICAL SECURITY VARIABLES (REQUIRED)
-# ============================================
-# Generate a secret key: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
-DJANGO_SECRET_KEY=your-secret-key-here
-
-# Debug mode (set to False in production)
+﻿DJANGO_SECRET_KEY=your-secret-key-here
 DEBUG=True
-
-# Allowed hosts (comma-separated, or leave empty for Railway auto-detection)
-# Example: ALLOWED_HOSTS=example.com,www.example.com
 ALLOWED_HOSTS=
-
-# CSRF trusted origins (comma-separated, for production)
-# Example: CSRF_TRUSTED_ORIGINS=https://example.com,https://www.example.com
 CSRF_TRUSTED_ORIGINS=
-
-# ============================================
-# AI FEATURES (Google Gemini API)
-# ============================================
-# Get your API key from: https://makersuite.google.com/app/apikey
 GOOGLE_AI_API_KEY=your-google-ai-api-key-here
-
-# Enable/disable Gemini AI features
 USE_GEMINI=True
-
-# Gemini model to use
-# Options: models/gemini-2.5-flash, models/gemini-pro, models/gemini-1.5-pro
 GEMINI_MODEL=models/gemini-2.5-flash
-
-# ============================================
-# SOCIAL LOGIN (OAuth)
-# ============================================
-# Google OAuth2 Credentials
-# Get from: https://console.cloud.google.com/
-# 1. Create OAuth client ID
-# 2. Add redirect URI: https://yourdomain.com/accounts/google/login/callback/
 GOOGLE_OAUTH2_CLIENT_ID=your-google-oauth-client-id
 GOOGLE_OAUTH2_CLIENT_SECRET=your-google-oauth-client-secret
-
-# GitHub OAuth Credentials (Optional)
-# Get from: https://github.com/settings/developers
-# 1. Create OAuth App
-# 2. Add callback URL: https://yourdomain.com/accounts/github/login/callback/
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
-
-# ============================================
-# EMAIL CONFIGURATION (For Password Reset)
-# ============================================
-# Development: Use console backend (emails printed to console)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
-
-# Production: Use SMTP backend (uncomment and configure)
-# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=587
-# EMAIL_USE_TLS=True
-# EMAIL_USE_SSL=False
-# EMAIL_HOST_USER=your-email@gmail.com
-# EMAIL_HOST_PASSWORD=your-app-password
-# DEFAULT_FROM_EMAIL=noreply@ai-resume-builder.com
-# SERVER_EMAIL=noreply@ai-resume-builder.com
-
-# For Gmail, you need to:
-# 1. Enable 2-factor authentication
-# 2. Generate an App Password (not your regular password)
-# 3. Use that App Password in EMAIL_HOST_PASSWORD
-
-# ============================================
-# DATABASE CONFIGURATION
-# ============================================
-# Development: SQLite (default, no configuration needed)
-# Production: PostgreSQL (Railway automatically sets DATABASE_URL)
-# DATABASE_URL is automatically set by Railway, Heroku, etc.
-# For local PostgreSQL:
-# DATABASE_URL=postgresql://user:password@localhost:5432/dbname
-
-# ============================================
-# CELERY CONFIGURATION (Background Tasks)
-# ============================================
-# Redis URL for Celery broker and result backend
-# Railway automatically sets REDIS_URL when you add Redis service
-# For local development:
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=noreply@ai-resume-builder.com
+SERVER_EMAIL=noreply@ai-resume-builder.com
+DATABASE_URL=
 CELERY_BROKER_URL=redis://127.0.0.1:6379/0
 CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
-
-# Or use REDIS_URL if available (Railway sets this automatically)
-# CELERY_BROKER_URL=
-# CELERY_RESULT_BACKEND=
-
-# ============================================
-# STORAGE CONFIGURATION
-# ============================================
-# Use AWS S3 for media files (set to False to use local storage - FREE on Railway)
 USE_S3=False
-
-# AWS S3 Configuration (only needed if USE_S3=True)
-# AWS_ACCESS_KEY_ID=your-aws-access-key
-# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-# AWS_STORAGE_BUCKET_NAME=your-bucket-name
-# AWS_S3_REGION_NAME=us-east-1
-
-# ============================================
-# FEATURE FLAGS
-# ============================================
-# Enable/disable job features (set to True to remove "Coming Soon" banner)
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+AWS_STORAGE_BUCKET_NAME=your-bucket-name
+AWS_S3_REGION_NAME=us-east-1
 JOBS_FEATURE_ENABLED=False
-
-# ============================================
-# LOGGING CONFIGURATION
-# ============================================
-# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 DJANGO_LOG_LEVEL=INFO
-
-# ============================================
-# USER VALIDATION SETTINGS
-# ============================================
-# Minimum and maximum age for user registration
 MIN_AGE=18
 MAX_AGE=100
-
-# ============================================
-# RAILWAY-SPECIFIC (Auto-set by Railway)
-# ============================================
-# These are automatically set by Railway, don't set manually:
-# - DATABASE_URL (from PostgreSQL service)
-# - REDIS_URL (from Redis service)
-# - RAILWAY_PUBLIC_DOMAIN
-# - RAILWAY_STATIC_URL
-
-# ============================================
-# SUPERUSER CREATION (Railway Deployment)
-# ============================================
-# For automatic superuser creation during deployment:
-# ADMIN_USERNAME=admin
-# ADMIN_EMAIL=admin@example.com
-# ADMIN_PASSWORD=your-secure-password
-
-# ============================================
-# NOTES
-# ============================================
-# 1. Never commit .env file to version control
-# 2. For production, set DEBUG=False
-# 3. Use strong, unique values for all secrets
-# 4. Railway automatically sets DATABASE_URL and REDIS_URL when services are linked
-# 5. For email in production, configure SMTP settings above
-# 6. Google OAuth redirect URI must match exactly: https://yourdomain.com/accounts/google/login/callback/
